# compiladores_lab_2026-2

./: .gitignore  README.md
final_proyect/: Makefile
p1-regex_to_nfa/: CMakeLists.txt
p1-regex_to_nfa/include/: data_structures.h  nfa.h  regex.h
p1-regex_to_nfa/src/: data_structures.c  main.c  nfa.c  regex.c
p1-regex_to_nfa/tests/: data_structures_test.c  nfa_tests.c  regex_test.c
src/: main.c
